tests/ui/missing_arguments_to_macro.stderr
error: Expected at least one argument to the macro!
 --> $DIR/missing_arguments_to_macro.rs:1:1
  |
1 | #[impl_trait_for_tuples::impl_for_tuples()]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
